--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==1.2.1
 appdirs==1.4.3
 asn1crypto==0.22.0
 cffi==1.10.0
@@ -5,6 +6,7 @@ click==6.7
 cryptography==1.8.1
 enum34==1.1.6
 Flask==0.12.1
+Flask-RESTful==0.3.5
 Flask-WTF==0.14.2
 idna==2.5
 ipaddress==1.0.18
@@ -18,6 +20,8 @@ paramiko==2.1.2
 pyasn1==0.2.3
 pycparser==2.17
 pyparsing==2.2.0
+python-dateutil==2.6.0
+pytz==2017.2
 six==1.10.0
 Werkzeug==0.12.1
 WTForms==2.1
